# autoblogger

./: .gitignore  Caddyfile  LICENSE  Makefile  README.md  docker-compose.caddy.yml  request.json  start.sh
.github/: README.md  dependabot.yml  dependency-review-config.yml
.github/workflows/: ci.yml  release.yml  security.yml
backend/: Dockerfile  ENHANCED_WRITING_AGENT.md  Makefile  README.md  cli.py  decorators.py  pyproject.toml  requirements.txt  run_api.py  run_tests.py  test_auth_system.py  test_writing_agent.py
backend/agents/: __init__.py  base_agent.py  editor_agent.py  manager_agent.py  research_agent.py  writing_agent.py
backend/api/: auth.py  auth_strategies.py  database.py  main.py
backend/api/routers/: apps.py  credits.py  system_auth.py  users.py
backend/apps/: __init__.py  blogger.py
backend/configs/: config.py  logging_config.py
backend/core/: decorators.py  exceptions.py  llm_services.py  middleware.py  state.py
backend/docs/: HOWTO_SETUP.md
backend/scripts/: init_db.py  run_api.py  run_tests.py  test_writing_agent.py
backend/tests/: conftest.py  test_api_endpoints.py  test_auth_security.py  test_auth_strategies.py  test_llm_services.py  test_search.py  test_state.py  test_system_auth_endpoints.py  test_system_auth_models.py
backend/tests/unittests/agents/: test_editor_agent.py  test_manager_agent.py  test_research_agent.py  test_writing_agent.py
backend/tests/utils/: __init__.py  auth_test_utils.py
backend/tools/: search.py
backend/utils/: __init__.py  filename.py
docs/: frontend-production-deployment.md
frontend/: Dockerfile  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.js
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/content/: page.tsx
frontend/src/app/credits/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/editor/[usageId]/: page.tsx
frontend/src/app/history/: page.tsx
frontend/src/components/: navigation.tsx
frontend/src/components/ui/: ai-assistant-avatar.tsx  badge.tsx  blog-article-modal.tsx  button.tsx  card.tsx  checkbox.tsx  content-card.tsx  content-preview-card.tsx  content-preview-modal.tsx  content-wizard.tsx  creator-control-center.tsx  credit-meter.tsx  input.tsx  markdown-viewer.tsx  progress-pipeline-enhanced.tsx  progress-pipeline.tsx  recent-articles.tsx  select.tsx  simple-progress-loader.tsx
frontend/src/lib/: api.ts
src/: .gitignore  API_SETUP.md  Dockerfile  pyproject.toml  test_auth_system.py
src/agents/: base_agent.py  writing_agent.py
src/api/: __init__.py  auth.py  auth_strategies.py  database.py  main.py
src/api/routers/: __init__.py  system_auth.py  users.py
src/configs/: config.py  logging_config.py
src/core/: __init__.py  middleware.py  state.py
src/docs/: API_KEY_AUTHENTICATION.md  HOWTO_TESTIT.md
src/scripts/: init_db.py  run_api.py  run_tests.py
src/tests/: conftest.py  test_auth_security.py  test_auth_strategies.py  test_simple_db.py  test_system_auth_endpoints.py  test_system_auth_endpoints_real_db.py  test_system_auth_models.py
src/tests/utils/: __init__.py  auth_test_utils.py
src/tools/: search.py
